# NOSA

./: README.md  modeling_llama_nosa.py
benchmarks/Efficiency/: cis_pooling.py  proxy_modeling_infllmv2.py  proxy_modeling_nosa.py  test_arkvale_pg19.py  test_arkvale_pg19.sh  test_full_hf_pg19.py  test_full_hf_pg19.sh  test_infllm_pg19.py  test_infllm_pg19.sh  test_infllmv2_gpu_pg19.py  test_infllmv2_gpu_pg19.sh  test_infllmv2_hf_pg19.py  test_infllmv2_hf_pg19.sh  test_infllmv2_pg19.py  test_infllmv2_pg19.sh  test_nosa.py  test_nosa_gpu_pg19.py  test_nosa_gpu_pg19.sh  test_nosa_hf_pg19.py  test_nosa_hf_pg19.sh  test_nosa_pg19.py  test_nosa_pg19.sh  test_sglang_pg19.py  test_sglang_pg19.sh  test_shadowkv_pg19.py  test_shadowkv_pg19.sh  test_vllm_pg19.py  test_vllm_pg19.sh
benchmarks/HELMET/: arguments.py  collect_result.sh  eval.py  eval_alce.py  model_utils.py
benchmarks/HELMET/configs/: cite.yaml  cite_16k.yaml  (+39 more)
benchmarks/LongBench/: download_data.sh  eval.py  pred.py
benchmarks/RULER/: README.md
benchmarks/Reasoning/: check.py  download_math_500.sh  note.md  run_exp.py  test.py
benchmarks/lm-evaluation-harness/: run_dma.sh  run_full.sh  run_infllmv2.sh  run_nosa.sh  test.py
dependencies/: README.md  dependency_versions_table.py  modeling_llama_infllm.py  modeling_llama_shadowkv.py  requirements_arkvale.txt  requirements_infllm.txt  requirements_nosa.txt  requirements_shadowkv.txt
dependencies/ArkVale/: README.md  requirements.txt
dependencies/ArkVale/source/arkvale_cpp/: CMakeLists.txt
dependencies/ArkVale/source/arkvale_cpp/src/: api.cu  append.cu  batch_decode.cu  batch_prefill.cu  estimate.cu  flashinfer_ops.h  gen_dispatch.py  rms_norm.cu  rotary.cu  select.cu
dependencies/ShadowKV/: CONTRIBUTING.md  README.md  index.html  index.html.1  setup.py  test.py
dependencies/flash-attention-nosa/: profile.sh  setup.py
dependencies/infllmv2_cuda_impl/: README.md  setup.py
nosi/: setup.py
nosi/nosi/: __init__.py  cache_engine_gpu.py  infllmv2_llama.py  max_pooling_fused.py  nosa_linear.py
nosi/nosi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+147 files in other folders)
